# morphstats

./: .gitignore  README.md  cotton-ui.sources.css  hello.py  manage.py  morph reg.code-workspace  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/: copilot-instructions.md
App/: mixins.py  tests.py  urls.py  views.py
App/templates/: app_base.html
App/templatetags/: customtags.py
Stat/: admin.py  models.py  serializers.py
Stat/migrations/: 0001_initial.py  0002_service_junior_service_senior.py  0003_alter_service_junior_alter_service_senior.py  0004_rename_date_service_stat.py  0005_alter_service_facilitators_and_more.py  0006_alter_service_facilitators_and_more.py  0007_service_facilitators_available.py  0008_service_non_system_facilitators.py  0009_service_fixed_total.py  0010_alter_service_facilitators_available.py
api/: permissions.py  urls.py  views.py
dashboard/: urls.py  views.py
events/: forms.py  models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_alter_event_date_alter_event_details_and_more.py  0004_event_end_date.py  0005_alter_event_status.py  (+2 more)
facilitators/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
main/: urls.py  views.py
morphers/: admin.py  apps.py  filters.py  models.py  urls.py  views.py
static/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
stats/: admin.py  models.py  urls.py  views.py
statsapp/: .envtemp  appsConfig.py  asgi.py  settings.py  urls.py  wsgi.py
templates/: 404.html  app_base.html  base.html
(+89 files in other folders)
