[project]
name = "morphstats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django>=5.1.4",
    "django-cors-headers>=4.6.0",
    "django-crispy-forms>=2.3",
    "django-environ>=0.11.2",
    "django-unfold>=0.43.0",
    "djangorestframework>=3.15.2",
    "pillow>=11.0.0",
]
