[project]
name = "morphstats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django>=5.1.4",
    "django-cors-headers>=4.6.0",
    "django-cotton>=2.7.2",
    "django-crispy-forms>=2.3",
    "django-environ>=0.11.2",
    "django-htmx>=1.27.0",
    "django-template-partials>=25.3",
    "django-unfold>=0.43.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.5.1",
    "pillow>=11.0.0",
]
